# prism

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: SPEC.md
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/history/: page.tsx
frontend/app/pair/[symbol]/: page.tsx
frontend/components/: Chart.tsx  LiveUpdater.tsx  PairCard.tsx  Sparkline.tsx
frontend/lib/: api.ts
scripts/: research.py
src/prism/: config.py  main.py
src/prism/api/: main.py
src/prism/api/routes/: analysis.py  klines.py  pairs.py  signals.py  websocket.py
src/prism/db/: models.py
src/prism/layers/: macro.py  market_data.py  news.py  risk.py  sentiment.py  synthesis.py
src/prism/research/: market.py  news.py  synthesis.py
