[project]
name = "prism"
version = "0.1.0"
description = "Motor de análisis de mercado crypto con síntesis via Claude AI"
requires-python = ">=3.11"
dependencies = [
    # HTTP client
    "httpx>=0.27.0",
    # Claude API
    "anthropic>=0.49.0",
    # Environment variables
    "python-dotenv>=1.0.0",
    # CLI (Research Agent)
    "typer>=0.12.0",
    # Web framework (Phase 3)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # Database (Phase 2)
    "sqlalchemy>=2.0.0",
    # Data processing
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
prism-research = "prism.research.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
